# vigorgraph-utils

./: .gitignore  README.md  dataset_painter.py  requirements.txt  test.json
src/: autoencoder.py  dataset_painter.py  dilate_test.py  distance_transform.py  findunion.py  main.py  seedlings.py  utils.py  vectorization.py  yolo.py
src/algorithms/: __init__.py  edge_linking.py  rdp.py
src/edge_linking_build/: CMakeLists.txt  build.sh  edge_linking.cpp  edge_linking.hpp
src/preprocessing/: __init__.py  skeletonize.py  split.py
